Fix grid breaking styles on course page
The auto calculation of grid columns was too wide on mobile screens and
needs to be manually specified.

--- a/app/styles/components/session-details.scss
+++ b/app/styles/components/session-details.scss
@@ -1,19 +1,12 @@
-$session-background-color: $active-background-color;
-
 .session-details {
-  background-color: $session-background-color;
+  background-color: $active-background-color;
   border-color: $header-grey;
   border-style: solid;
   border-top: 0;
   border-width: 0 2px 2px;
-  padding: .8rem;
 
   table thead {
     background-color: $text-blue;
     color: $white;
-  }
-
-  .offering-editor-learnergroups {
-    text-align: left;
   }
 }
